--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["James Kalyan <michaeljameskalyan@gmail.com>"]
 categories = ["command-line-utilities"]
-description = "A simple value-picker bar inspired by dmenu"
+description = "A simple, cross-platform slider bar."
 documentation = "https://github.com/mjkalyan/dbar"
 edition = "2018"
 homepage = "https://github.com/mjkalyan/dbar"
